--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "firebase": "^5.8.3",
+    "moment": "^2.24.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
-    "react-scripts": "2.1.5"
+    "react-fb-image-grid": "^0.1.5",
+    "react-moment": "^0.8.4",
+    "react-scripts": "2.1.5",
+    "reactstrap": "^7.1.0",
+    "rxjs": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
